# new-ebooks

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
new_ebooks/: __main__.py  auth.py  checker.py  cli.py  config.py  emailer.py  renderer.py  scheduler.py  scraper.py  state.py
tests/: test_checker.py  test_renderer.py  test_scraper.py  test_state.py
tests/fixtures/: sample_page.html
